# djano-endpoint

./: README.md  db.sqlite3  pyproject.toml
endpoint/: settings.py  urls.py
student/: forms.py  middlewares.py  models.py  serializers.py  students.json  urls.py  views.py
student/migrations/: 0001_initial.py  0002_parent_subject_student_parent.py  0003_alter_student_parent.py  0004_remove_subject_students_remove_student_parent_and_more.py  0005_parent_subject_student_parent.py  0006_alter_parent_first_name.py  0007_student_not starts with m.py  0008_remove_student_not starts with m_and_more.py  0009_remove_student_not starts with m_and_more.py  0010_remove_student_not starts with m_and_more.py  0011_parent_email_parent_password_student_password_and_more.py  0012_activeusers.py  0013_parentactiveusers_studentactiveusers_and_more.py  0014_alter_parentactiveusers_user.py  0015_alter_studentactiveusers_user.py
